# ComposersDesktopProject

./: .gitignore  README.md  linux-howtobuild.txt  mingw-howtobuild.txt  osx-howtobuild.txt
dev/: .gitignore
dev/blur/: Makefile.osx
dev/cdp2k/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/cdparams/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/cdparams_other/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/cdparse/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/combine/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/distort/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/editsf/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/env/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/extend/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/filter/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/focus/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/formants/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/grain/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/hfperm/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/hilite/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/houskeep/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/misc/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/modify/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/morph/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/new/: Makefile.linux  Makefile.mingw  Makefile.osx
dev/pagrab/: Makefile.linux  Makefile.mingw  (+1 more)
libaaio-0.3.1/: .gitignore  Makefile.am  Makefile.in
libaaio-0.3.1/man/man3/: Makefile.am  Makefile.in
(+54 files in other folders)
